Don't assume that FB address registers are initialized properly

https://bugs.freedesktop.org/show_bug.cgi?id=28249

ark driver does not work with Hercules Stingray 64 card (ark2000pv).
X fails to start with:

[...]
(II) ark(0): vgaHWGetIOBase: hwp->IOBase is 0x03d0, hwp->PIOOffset is
0x0000
(II) ark(0): Creating default Display subsection in Screen section
        "Default Screen Section" for depth/fbbpp 24/32
(==) ark(0): Depth 24, (--) framebuffer bpp 32
(==) ark(0): RGB weight 888
(==) ark(0): Default visual is TrueColor
(**) ark(0): Chipset: "ark2000pv"
(--) ark(0): Framebuffer @ 0xe5e50000
(==) ark(0): Using gamma correction (1.0, 1.0, 1.0)
(--) ark(0): Detected 2048 bytes video ram
[...]
Fatal server error:
AddScreen/ScreenInit failed for driver 0

Comparing with lspci, the framebuffer address is wrong:
00:0f.0 VGA compatible controller: ARK Logic Inc 2000PV [Stingray] (prog-if 00 [VGA controller])
	Flags: medium devsel
	Memory at e5000000 (32-bit, prefetchable) [size=4M]
	[virtual] Expansion ROM at 1c000000 [disabled] [size=64K]

Reviewed-by: Adam Jackson <ajax@redhat.com>